fix block height on mobile

--- a/client-side/src/app/block/block.component.scss
+++ b/client-side/src/app/block/block.component.scss
@@ -1,7 +1,7 @@
 
 ::ng-deep .view-block .generic-viewer .list{
     min-height: 30rem;
-    height: 100%;
+    height: 100vh;
     width: 100%;
     min-width: fit-content;
 
